# facproject

./: .gitignore  1.txt  AUDIT_REPORT.md  AUDIT_REPORT_PART2.md  AUDIT_REPORT_PART3.md  AUDIT_REPORT_PART4.md  AUDIT_REPORT_PART5.md  AUDIT_REPORT_PART7.md  AUDIT_REPORT_PART8.md  CALIBRATION_QUICKSTART_RU.md  FINAL_SUMMARY.md  PROJECT_MANIFEST.txt  PR_APPLICATION_REPORT.md  README_FORENSIC_UV.md  WRINKLE_PIPELINE_SPEC.md  add_all_logging.py  assets  dataset_manifest.example.csv  generate_uv_with_module.py  requirements-macos.txt  run_calibration.py  run_calibration_engine.py  run_main_analysis.py  setup_macos_m1.sh  test_alignment_golden.py  test_face_model_alignment.py  test_pose_correction_standalone.py  test_uv_module.py
.selfcheck_stage1_A_selfcheck_input/: selfcheck_input_map.csv
3ddfa_v3/: demo.py
3ddfav3/: UV_TEXTURE_README.md  demo.py
FFHQ-detect-face-wrinkles/: README.md  face_parsing_extraction.py  pyproject.toml
app6/: AUDIT2_REPORT.md  AUDIT3_REPORT.md  AUDIT4_REPORT.md  AUDIT5_REPORT.md  AUDIT6_REPORT.md  AUDIT_EXECUTION_V1_7.md  AUDIT_INTEGRATION.md  AUDIT_REPORT.md  CONVENTIONS.py  FFHQ-detect-face-wrinkles  FUNCTION_STATUS_LOG.md  GITHUB_CONTENT_SYNC.md  PR.md  PRIVATE_HYPOTHESIS_LAYER.md  QA_REPORT.md  README.md  README_SKIN_V3.md  STAGE2_SPEC.md  STATUS_AUDIT.py  TOP50_ERRORS.md  __init__.py  manage_skin_run.py  run_calibration.py  run_calibration_per_photo.sh  run_private_hypotheses.py  run_skin_calibration.py  run_skin_stage1.py  run_skin_stage2.py  run_skin_stage3.py  run_stage1.py  run_stage2.py  run_stage2b.py  run_stage3.py
ui/: README.md  (+12 more)
(+5057 files in other folders)
