[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FFHQ-detect-face-wrinkles"
version = "0.1.0"
description = "FFHQ facial wrinkle detection (local editable install)"
requires-python = ">=3.10"

[tool.setuptools]
py-modules = ["app", "config", "evaluate", "face_detection", "face_parsing_extraction", "losses", "train"]
packages = ["unet", "utils"]
